[gd_scene load_steps=53 format=2]

[ext_resource path="res://scenes/Wiki.gd" type="Script" id=1]
[ext_resource path="res://fonts/prstartk.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://sprites/suit_hearts1.png" type="Texture" id=3]
[ext_resource path="res://sprites/key_item.png" type="Texture" id=4]
[ext_resource path="res://sprites/wolf_bite.png" type="Texture" id=5]
[ext_resource path="res://sprites/melee.png" type="Texture" id=6]
[ext_resource path="res://sprites/knife_item.png" type="Texture" id=7]
[ext_resource path="res://sprites/ice_attack.png" type="Texture" id=8]
[ext_resource path="res://sprites/gun_mini.png" type="Texture" id=9]
[ext_resource path="res://sprites/life_2_win.png" type="Texture" id=10]
[ext_resource path="res://sprites/dash_item.png" type="Texture" id=11]
[ext_resource path="res://sprites/spike_ball.png" type="Texture" id=12]
[ext_resource path="res://sprites/shoot_speed.png" type="Texture" id=13]
[ext_resource path="res://sprites/blue_lobster.png" type="Texture" id=14]
[ext_resource path="res://sprites/power_glove.png" type="Texture" id=15]
[ext_resource path="res://sprites/pin_item.png" type="Texture" id=16]
[ext_resource path="res://sprites/justice.png" type="Texture" id=17]
[ext_resource path="res://sprites/idol_mask_item.png" type="Texture" id=18]
[ext_resource path="res://sprites/back_pack.png" type="Texture" id=19]
[ext_resource path="res://sprites/electric_attack.png" type="Texture" id=20]
[ext_resource path="res://sprites/poison.png" type="Texture" id=21]
[ext_resource path="res://sprites/masterkey_item.png" type="Texture" id=22]
[ext_resource path="res://sprites/speed.png" type="Texture" id=23]
[ext_resource path="res://sprites/plasma_item.png" type="Texture" id=24]
[ext_resource path="res://sprites/balloon.png" type="Texture" id=25]
[ext_resource path="res://sprites/suit_hearts3.png" type="Texture" id=26]
[ext_resource path="res://sprites/roll_item.png" type="Texture" id=27]
[ext_resource path="res://sprites/fist.png" type="Texture" id=28]
[ext_resource path="res://sprites/clover.png" type="Texture" id=29]
[ext_resource path="res://sprites/pay_2_win.png" type="Texture" id=30]
[ext_resource path="res://sprites/katana_item.png" type="Texture" id=31]
[ext_resource path="res://sprites/ice_cream.png" type="Texture" id=32]
[ext_resource path="res://sprites/suit_hearts4.png" type="Texture" id=33]
[ext_resource path="res://sprites/ramen.png" type="Texture" id=34]
[ext_resource path="res://sprites/bomb4.png" type="Texture" id=35]
[ext_resource path="res://sprites/fly_item.png" type="Texture" id=36]
[ext_resource path="res://sprites/magnet.png" type="Texture" id=37]
[ext_resource path="res://sprites/explosive_item.png" type="Texture" id=38]
[ext_resource path="res://sprites/suit_hearts2.png" type="Texture" id=39]
[ext_resource path="res://sprites/tomahawk_item_spr_0.png" type="Texture" id=40]
[ext_resource path="res://sprites/cherry_item.png" type="Texture" id=41]
[ext_resource path="res://sprites/brain.png" type="Texture" id=42]
[ext_resource path="res://sprites/spells_book.png" type="Texture" id=43]
[ext_resource path="res://sprites/grandpa_photo_item.png" type="Texture" id=44]
[ext_resource path="res://sprites/unknown.png" type="Texture" id=45]

[sub_resource type="DynamicFont" id=1]
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
font_data = ExtResource( 2 )

[sub_resource type="Shader" id=4]
code = "shader_type canvas_item;

uniform float white;

void fragment() {
    vec4 texture_color = texture(TEXTURE, UV);
    COLOR = vec4(mix(texture_color.rgb, vec3(1,1,1), white), texture_color.a);
}"

[sub_resource type="ShaderMaterial" id=5]
resource_local_to_scene = true
shader = SubResource( 4 )
shader_param/white = 0.0

[sub_resource type="SpriteFrames" id=6]
resource_local_to_scene = true
animations = [ {
"frames": [ ExtResource( 19 ) ],
"loop": true,
"name": "backpack",
"speed": 5.0
}, {
"frames": [ ExtResource( 25 ) ],
"loop": true,
"name": "balloon",
"speed": 5.0
}, {
"frames": [ ExtResource( 26 ) ],
"loop": true,
"name": "blue_heart",
"speed": 5.0
}, {
"frames": [ ExtResource( 14 ) ],
"loop": true,
"name": "blue_lobster",
"speed": 5.0
}, {
"frames": [ ExtResource( 35 ) ],
"loop": true,
"name": "bomb",
"speed": 5.0
}, {
"frames": [ ExtResource( 42 ) ],
"loop": true,
"name": "brain",
"speed": 5.0
}, {
"frames": [ ExtResource( 41 ) ],
"loop": true,
"name": "cherry_item",
"speed": 5.0
}, {
"frames": [ ExtResource( 34 ) ],
"loop": true,
"name": "damageup",
"speed": 5.0
}, {
"frames": [ ExtResource( 11 ) ],
"loop": true,
"name": "dash",
"speed": 5.0
}, {
"frames": [ ExtResource( 20 ) ],
"loop": true,
"name": "electric_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 39 ) ],
"loop": true,
"name": "empty_heart",
"speed": 5.0
}, {
"frames": [ ExtResource( 38 ) ],
"loop": true,
"name": "explosive_item",
"speed": 5.0
}, {
"frames": [ ExtResource( 36 ) ],
"loop": true,
"name": "fly_item",
"speed": 5.0
}, {
"frames": [ ExtResource( 44 ) ],
"loop": true,
"name": "grandpa_photo",
"speed": 5.0
}, {
"frames": [ ExtResource( 33 ) ],
"loop": true,
"name": "green_heart",
"speed": 5.0
}, {
"frames": [ ExtResource( 8 ) ],
"loop": true,
"name": "ice_attack",
"speed": 5.0
}, {
"frames": [ ExtResource( 32 ) ],
"loop": true,
"name": "ice_cream",
"speed": 5.0
}, {
"frames": [ ExtResource( 18 ) ],
"loop": true,
"name": "idol_mask",
"speed": 5.0
}, {
"frames": [ ExtResource( 28 ) ],
"loop": true,
"name": "iron_fist",
"speed": 5.0
}, {
"frames": [ ExtResource( 17 ) ],
"loop": true,
"name": "justice",
"speed": 5.0
}, {
"frames": [ ExtResource( 31 ) ],
"loop": true,
"name": "katana",
"speed": 5.0
}, {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "key",
"speed": 5.0
}, {
"frames": [ ExtResource( 7 ) ],
"loop": true,
"name": "knife",
"speed": 5.0
}, {
"frames": [ ExtResource( 10 ) ],
"loop": true,
"name": "life_2_win",
"speed": 5.0
}, {
"frames": [ ExtResource( 29 ) ],
"loop": true,
"name": "luckup",
"speed": 5.0
}, {
"frames": [ ExtResource( 37 ) ],
"loop": true,
"name": "magnet",
"speed": 5.0
}, {
"frames": [ ExtResource( 22 ) ],
"loop": true,
"name": "master_key",
"speed": 5.0
}, {
"frames": [ ExtResource( 6 ) ],
"loop": true,
"name": "meleeup",
"speed": 5.0
}, {
"frames": [  ],
"loop": true,
"name": "none",
"speed": 5.0
}, {
"frames": [ ExtResource( 3 ) ],
"loop": true,
"name": "normal_heart",
"speed": 5.0
}, {
"frames": [ ExtResource( 30 ) ],
"loop": true,
"name": "pay_2_win",
"speed": 5.0
}, {
"frames": [ ExtResource( 16 ) ],
"loop": true,
"name": "pin_item",
"speed": 5.0
}, {
"frames": [ ExtResource( 24 ) ],
"loop": true,
"name": "plasma",
"speed": 5.0
}, {
"frames": [ ExtResource( 21 ) ],
"loop": true,
"name": "poison",
"speed": 5.0
}, {
"frames": [ ExtResource( 15 ) ],
"loop": true,
"name": "power_glove",
"speed": 5.0
}, {
"frames": [ ExtResource( 27 ) ],
"loop": true,
"name": "roll",
"speed": 5.0
}, {
"frames": [ ExtResource( 13 ) ],
"loop": true,
"name": "shoot_speed_up",
"speed": 5.0
}, {
"frames": [ ExtResource( 9 ) ],
"loop": true,
"name": "shot_gun",
"speed": 5.0
}, {
"frames": [ ExtResource( 23 ) ],
"loop": true,
"name": "speedup",
"speed": 5.0
}, {
"frames": [ ExtResource( 43 ) ],
"loop": true,
"name": "spells_book",
"speed": 5.0
}, {
"frames": [ ExtResource( 12 ) ],
"loop": true,
"name": "spikeball",
"speed": 5.0
}, {
"frames": [ ExtResource( 40 ) ],
"loop": true,
"name": "tomahawk",
"speed": 5.0
}, {
"frames": [ ExtResource( 45 ) ],
"loop": true,
"name": "unknown",
"speed": 5.0
}, {
"frames": [ ExtResource( 5 ) ],
"loop": true,
"name": "wolf_bite",
"speed": 5.0
} ]

[sub_resource type="DynamicFont" id=7]
outline_size = 1
outline_color = Color( 0.576471, 0.0588235, 0.0588235, 1 )
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=8]
size = 24
outline_size = 1
font_data = ExtResource( 2 )

[node name="Wiki" type="Node2D"]
position = Vector2( 11, 367 )
script = ExtResource( 1 )

[node name="ColorRect" type="ColorRect" parent="."]
margin_left = -10.0
margin_top = -369.0
margin_right = 1014.0
margin_bottom = 227.0
color = Color( 0, 0, 0, 0.666667 )

[node name="items_list" type="ItemList" parent="."]
margin_left = -10.0
margin_top = -301.0
margin_right = 439.0
margin_bottom = 227.0
custom_fonts/font = SubResource( 1 )

[node name="lbl_title" type="Label" parent="."]
margin_left = 472.0
margin_top = -296.0
margin_right = 932.0
margin_bottom = -279.0
custom_fonts/font = SubResource( 2 )
text = "dfsdfsdfsdf"
autowrap = true

[node name="lbl_description" type="Label" parent="."]
margin_left = 446.0
margin_top = -264.0
margin_right = 1006.0
margin_bottom = -217.0
custom_fonts/font = SubResource( 2 )
text = "ioioioioioo"
autowrap = true

[node name="lbl_long_description" type="Label" parent="."]
margin_left = 446.0
margin_top = -214.0
margin_right = 1006.0
margin_bottom = 81.0
custom_fonts/font = SubResource( 2 )
text = "dsfsdjfsdjflksdjfkljsdflds"
autowrap = true

[node name="item" type="AnimatedSprite" parent="."]
material = SubResource( 5 )
position = Vector2( 453, -288 )
frames = SubResource( 6 )
animation = "none"

[node name="btn_close" type="Button" parent="."]
margin_left = 983.0
margin_top = -299.0
margin_right = 1011.0
margin_bottom = -277.0
custom_fonts/font = SubResource( 7 )
text = "X"
icon_align = 1

[node name="lbl_book_title" type="Label" parent="."]
margin_left = -11.0
margin_top = -346.0
margin_right = 1013.0
margin_bottom = -322.0
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_fonts/font = SubResource( 8 )
text = "ANCIENT BOOK OF KNOWLEDGE (aka wiki)"
align = 1
valign = 1

[connection signal="item_selected" from="items_list" to="." method="_on_items_list_item_selected"]
[connection signal="pressed" from="btn_close" to="." method="_on_btn_close_pressed"]
